Android talking with gcm service

--- a/walloff_android/AndroidManifest.xml
+++ b/walloff_android/AndroidManifest.xml
@@ -5,11 +5,16 @@
 
     <uses-sdk
         android:minSdkVersion="8"
-        android:targetSdkVersion="15" />
-    <uses-permission android:name="android.permission.INTERNET"/>
-    <permission android:name="com.walloff.android.permission.C2D_MESSAGE" android:protectionLevel="signature"></permission>
+        android:targetSdkVersion="8" />
+    
+    <permission 
+        android:name="com.walloff.android.permission.C2D_MESSAGE" 
+        android:protectionLevel="signature" />
+    
     <uses-permission android:name="com.walloff.android.permission.C2D_MESSAGE" />
     <uses-permission android:name="com.google.android.c2dm.permission.RECEIVE"/>
+    <uses-permission android:name="android.permission.CHANGE_WIFI_STATE"/>
+    <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.GET_ACCOUNTS"/>
     <uses-permission android:name="android.permission.WAKE_LOCK"/>
 
@@ -17,18 +22,21 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
+        
         <activity
             android:name=".MainMenuActivity"
             android:label="@string/title_activity_main_menu" >
+            
             <intent-filter>
+			GCMRegistrar.
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         
-        <receiver android:name="com.google.android.gcm.GCMBroadcastReceiver" 
-            	android:permission="com.google.android.c2dm.permission.SEND" >
+        <receiver 
+            android:name="com.google.android.gcm.GCMBroadcastReceiver" 
+            android:permission="com.google.android.c2dm.permission.SEND" >
             <intent-filter >
                 <action android:name="com.google.android.c2dm.intent.RECEIVE" />
                 <action android:name="com.google.android.c2dm.intent.REGISTRATION" />
@@ -36,7 +44,7 @@
             </intent-filter>
         </receiver>
         
-        <service android:name=".GCMIntentService"></service>
+        <service android:name=".GCMIntentService" android:enabled="true"></service>
         
     </application>
 
