--- a/walloff_android/AndroidManifest.xml
+++ b/walloff_android/AndroidManifest.xml
@@ -3,20 +3,23 @@
     android:versionCode="1"
     android:versionName="1.0" >
 
-    <uses-sdk
-        android:minSdkVersion="8"
-        android:targetSdkVersion="8" />
+    <uses-sdk android:minSdkVersion="8" android:targetSdkVersion="8" />
     
-    <permission 
-        android:name="com.walloff.android.permission.C2D_MESSAGE" 
+    <!-- Custom GCM permission -->
+    <permission android:name="com.walloff.android.permission.C2D_MESSAGE" 
         android:protectionLevel="signature" />
-    
     <uses-permission android:name="com.walloff.android.permission.C2D_MESSAGE" />
-    <uses-permission android:name="com.google.android.c2dm.permission.RECEIVE"/>
-    <uses-permission android:name="android.permission.CHANGE_WIFI_STATE"/>
-    <uses-permission android:name="android.permission.INTERNET"/>
-    <uses-permission android:name="android.permission.GET_ACCOUNTS"/>
-    <uses-permission android:name="android.permission.WAKE_LOCK"/>
+    
+    <!-- Application receives GCM messages. -->
+	<uses-permission android:name="com.google.android.c2dm.permission.RECEIVE"/>
+	<!-- GCM connects to Google Services. -->
+	<uses-permission android:name="android.permission.INTERNET"/>
+	<!-- GCM requires a Google account. -->
+	<uses-permission android:name="android.permission.GET_ACCOUNTS"/>
+	<!-- Keeps the processor from sleeping when a message is received. -->
+	<uses-permission android:name="android.permission.WAKE_LOCK"/>
+	<!--  Wifi permission -->
+	<uses-permission android:name="android.permission.CHANGE_WIFI_STATE"/>
 
     <application
         android:icon="@drawable/ic_launcher"
@@ -28,7 +31,6 @@
             android:label="@string/title_activity_main_menu" >
             
             <intent-filter>
-			GCMRegistrar.
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
