--- a/walloff_android/AndroidManifest.xml
+++ b/walloff_android/AndroidManifest.xml
@@ -24,7 +24,7 @@
     <application
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@android:style/Theme.Light.NoTitleBar.Fullscreen">
+        android:theme="@style/WalloffTheme">
         
         <activity
             android:name=".MainMenuActivity"
