--- a/walloff_android/AndroidManifest.xml
+++ b/walloff_android/AndroidManifest.xml
@@ -36,6 +36,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".GameLobbyActivity"></activity>
         
         <receiver 
             android:name="com.google.android.gcm.GCMBroadcastReceiver" 
