--- a/walloff_android/AndroidManifest.xml
+++ b/walloff_android/AndroidManifest.xml
@@ -18,9 +18,10 @@
 	<uses-permission android:name="android.permission.GET_ACCOUNTS"/>
 	<!-- Keeps the processor from sleeping when a message is received. -->
 	<uses-permission android:name="android.permission.WAKE_LOCK"/>
-	<!--  Wifi permission -->
-	<uses-permission android:name="android.permission.CHANGE_WIFI_STATE"/>
-
+	<!-- Send sticky broadcasts -->
+	<uses-permission android:name="android.permission.BROADCAST_STICKY"/>
+	<uses-permission android:name="android.permission.CHANGE_NETWORK_STATE"/>
+	
     <application
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
