--- a/walloff_android/AndroidManifest.xml
+++ b/walloff_android/AndroidManifest.xml
@@ -3,9 +3,11 @@
     android:versionCode="1"
     android:versionName="1.0" >
 
-    <uses-sdk android:minSdkVersion="8" android:targetSdkVersion="16" />
+    <uses-sdk android:minSdkVersion="8" android:targetSdkVersion="16"/>
     <uses-permission android:name="android.permission.INTERNET"/>
-    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />	
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>	
+    <uses-permission android:name="android.permission.BROADCAST_STICKY"/>
+    
     <application
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
