--- a/walloff_android/AndroidManifest.xml
+++ b/walloff_android/AndroidManifest.xml
@@ -23,8 +23,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".GameLobbyActivity"
-            android:screenOrientation="landscape"></activity>
+        <activity 
+            android:name=".GameLobbyActivity"
+            android:screenOrientation="landscape">
+        </activity>
         
     </application>
 
